--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,11 @@
 {
-"NamaBot":"Lexxy Botz",
-"OwnerNumber":"6285789004732",
-"OwnerName":"Lexxy-Official",
-"GithubOwner":"https://github.com/Lexxy24",
-"YoutubeOwner":"https://youtube.com/c/LEX4YOUU",
+"NamaBot":"Ishidai Botz",
+"OwnerNumber":"6281553838607",
+"OwnerName":"Ishiruka",
+"GithubOwner":"https://github.com/gakpunya",
+"YoutubeOwner":"https://youtube.com/channel/UCI_3UKsbdDpp6naOGn5gy-w",
 
-"LolHuman":"APIKEY_LUH",
+"LolHuman":"4bb40b1d6cefcf204ab9deca",
 "DhaKey":"NisaaCantik",
 "LeysApi":"IkyOgiwara",
 "HardiKey":"hardianto",
